[project]
name = "assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "box2d>=2.3.10",
    "gymnasium[box2d]>=1.2.1",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.9",
    "notebook>=7.4.7",
    "opencv-python-headless>=4.12.0.88",
    "torch>=2.9.0",
    "wandb>=0.22.2",
]
